# watermark-inpainting

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
lib/dataset/: dataset.py
lib/loss/: __init__.py  masked_l1.py  vgg.py
lib/models/: base_model.py  inference_wrapper.py  splitnet_interface.py
lib/models/rirci/: __init__.py  exclusion.py  restoration.py  rirci.py
lib/models/rirci/glci/: base.py  glci.py
lib/models/slbr/: blocks.py  config.py  resunet.py
lib/rirci/: base.py  blocks.py  exclusion.py  restoration.py  resunet.py  rirci.py
lib/rirci/glci/: base.py  glci.py
lib/slbr/: blocks.py  resunet.py
lib/training/: trainer.py
literature/: bach_vkr_report.tex
notebooks/: batch_inference.ipynb  evaluation_rirci_simple.ipynb  splitnet.ipynb
notebooks/human_evaluation/: paired_instruction.md  prod_experiment_dataset_collection.ipynb  single_instruction.md  syn_experiment_dataset_collection.ipynb
tests/: test_base.py  test_glci.py  test_loss.py  test_rirci.py  test_slbr.py
