[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Anton Ivanov <apivanov@avito.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
tqdm = "^4.67.1"
numpy = "^2.2.4"
pandas = "^2.2.3"
rarfile = "^4.2"
gdown = "^5.2.0"
jupyter = "^1.1.1"
torch = { version = "2.5.1+cu118", source = "torchcu118" }
torchvision = { version = "0.20.1+cu118", source = "torchcu118" }
pytest = "^8.3.5"
einops = "^0.8.1"
huggingface-hub = "^0.30.2"
torchmetrics = "^1.7.1"
piqa = "^1.3.2"

[[tool.poetry.source]]
name = "torchcu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
